--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,8 @@
 		<!--	 CSS -->
 		<link rel="stylesheet" href="static/css/style.css">
 		<script src="static/js/jquery.min.js"></script>
-		<script src="popup.js"></script>
+        <script src="popup.js"></script>
+		<script src="options.js"></script>
 		<script src="static/js/our.js"></script>
 	</head>		
 	<body>
